--- a/config.json
+++ b/config.json
@@ -1,10 +1,7 @@
 {
-    "owner": "18299897014",
+    "owner": "+19392234020",
     "mods": [
-        "34602132300",
-        "18299897014",
-        "50055280",
-        "+34602067238"
+        "+19392234020",
     ],
     "public": true
 }
