--- a/config.json
+++ b/config.json
@@ -1,8 +1,10 @@
 {
-    "owner": "+19392234020",
+    "owner": "19392234020",
     "mods": [
-        "+19392234020"
+        "19392234020",
+        "19392234020",
+        "19392234020",
+        "19392234020"
     ],
     "public": true
 }
-
